# 5head.biz

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  local.ini  local.yml  prod.yml  pyproject.toml  requirements.txt  uwsgi.ini
app/: main.py  routes.py  tasks.py
app/assets/: base.css  style.css
app/biz_insights/graphing/: interactive_freq_over_time.py
app/celery-queue/: Dockerfile  Dockerfile.dev  celerybeat-schedule  requirements.txt
app/dash/: crossfilter_example.py  iris_kmeans.py
app/dash/biz_insights/: CoinDict.py  bizCoinMentions.py  data_parsing.py  getThreads.py
app/dash/biz_insights/coingecko/: util.py
app/dash/biz_insights/graphing/example_files/: test_simple_multicolour.py
app/dash/biz_insights/postgres_db/: bizThreads.py  db.py
app/dash/biz_insights/scrapers/: ChanArchieve.py  ChanOfficial.py
app/templates/: base.html
app/templates/partials/: navbar.html
celery-queue/: celerybeat-schedule  tasks.py
services/: init-letsencrypt.sh
services/nginx/: Dockerfile  app.conf  nginx.conf
services/nginx-backup/: www-backup.conf
