[tool.poetry]
name = "5head-biz"
version = "0.1.0"
description = "Integrate Plotly Dash into your Flask applications."
authors = ["tzelleke <theodros.zelleke@gmail.com>"]
maintainers = ["tzelleke <theodros.zelleke@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/plotly-dash-with-flask/"
repository = "https://github.com/toddbirchard/plotlydash-flask-tutorial/"
documentation = "https://hackersandslackers.com/plotly-dash-with-flask/"
keywords = [
    "Flask",
    "Plotly",
    "Plotly Dash",
    "Data Science"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Flask = "^2.0.1"
dash = "2.0.0"
dash-bootstrap-components = "1.0.0"
pandas = "1.3.4"
scikit-learn = "^0.24.2"
Markdown = "^3.3.4"
python-dotenv = "0.19.2"
Pygments = "^2.9.0"
#pygments-style-solarized = "^0.2.0"
beautifulsoup4 = "4.10.0"
ciso8601 = "2.2.0"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
joblib = "1.1.0"
loguru = "0.5.3"
numpy = "1.21.3"
openpyxl = "3.0.9"
pandas-ta = "^0.3.14-beta.0"
plotly = "5.3.1"
psycopg2 = "2.9.1"
pycoingecko = "2.2.0"
pymongo = "3.12.1"
requests = "2.26.0"
selenium = "4.0.0"
tqdm = "4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
